@@ -22,6 +22,9 @@ Release 2.4.0 - ???
 
    * Add detection for Frictionless Data packages and WACZ (TIKA-3696).
 
+   * Add detection for DGN files with gratitude and credit
+     to Steven Frew's tika-dgn-detector (TIKA-3721).
+
    * Add a fetcher and emitter for Azure blob storage (TIKA-3707).
 
    * Add detection for files encrypted by Microsoft's Rights Management Service
